# waybar-iostat

./: Cargo.toml  README.md
src/: lib.rs
src/util/: mod.rs  structs.rs
