[package]
name = "waybar-iostat"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
async-io = "2.6.0"
serde = { version = "1.0.228", features = ["derive"] }
waybar-cffi = "0.1.1"

[lib]
name = "waybar_iostat"
crate-type = ["cdylib"]
